--- a/src/app.css
+++ b/src/app.css
@@ -1,79 +1,70 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
- 
+
 @layer base {
   :root {
-    --background: 0 0% 100%;
-    --foreground: 222.2 84% 4.9%;
- 
-    --muted: 210 40% 96.1%;
-    --muted-foreground: 215.4 16.3% 46.9%;
- 
-    --popover: 0 0% 100%;
-    --popover-foreground: 222.2 84% 4.9%;
- 
-    --card: 0 0% 100%;
-    --card-foreground: 222.2 84% 4.9%;
- 
-    --border: 214.3 31.8% 91.4%;
-    --input: 214.3 31.8% 91.4%;
- 
-    --primary: 222.2 47.4% 11.2%;
-    --primary-foreground: 210 40% 98%;
- 
-    --secondary: 210 40% 96.1%;
-    --secondary-foreground: 222.2 47.4% 11.2%;
- 
-    --accent: 210 40% 96.1%;
-    --accent-foreground: 222.2 47.4% 11.2%;
- 
-    --destructive: 0 72.2% 50.6%;
-    --destructive-foreground: 210 40% 98%;
- 
-    --ring: 222.2 84% 4.9%;
- 
+    --background: 10 43% 98%;
+    --foreground: 10 73% 3%;
+    --muted: 257 14% 90%;
+    --muted-foreground: 130 10% 40%;
+    --popover: 10 43% 97%;
+    --popover-foreground: 10 73% 2%;
+    --card: 10 43% 97%;
+    --card-foreground: 10 73% 2%;
+    --border: 10 7% 93%;
+    --input: 10 7% 93%;
+    --primary: 10 24% 85%;
+    --primary-foreground: 10 24% 25%;
+    --secondary: 130 24% 85%;
+    --secondary-foreground: 130 24% 25%;
+    --accent: 250 24% 90%;
+    --accent-foreground: 250 24% 25%;
+    --destructive: 18 85% 32%;
+    --destructive-foreground: 18 85% 92%;
+    --ring: 10 24% 85%;
+    --chart-1: 10 24% 85%;
+    --chart-2: 130 24% 85%;
+    --chart-3: 250 24% 85%;
+    --chart-4: 130 24% 88%;
+    --chart-5: 10 27% 85%;
     --radius: 0.5rem;
 
-    --sidebar-background: 0 0% 98%;
-    --sidebar-foreground: 240 5.3% 26.1%;
-    --sidebar-primary: 240 5.9% 10%;
-    --sidebar-primary-foreground: 0 0% 98%;
-    --sidebar-accent: 240 4.8% 95.9%;
-    --sidebar-accent-foreground: 240 5.9% 10%;
-    --sidebar-border: 220 13% 91%;
-    --sidebar-ring: 217.2 91.2% 59.8%;
+    --sidebar-background: 10 43% 98%;
+    --sidebar-foreground: 10 73% 3%;
+    --sidebar-primary: 10 24% 85%;
+    --sidebar-primary-foreground: 10 24% 25%;
+    --sidebar-accent: 250 24% 85%;
+    --sidebar-accent-foreground: 250 24% 25%;
+    --sidebar-border: 10 7% 93%;
+    --sidebar-ring: 10 24% 85%;
   }
- 
+
   .dark {
-    --background: 222.2 84% 4.9%;
-    --foreground: 210 40% 98%;
- 
-    --muted: 217.2 32.6% 17.5%;
-    --muted-foreground: 215 20.2% 65.1%;
- 
-    --popover: 222.2 84% 4.9%;
-    --popover-foreground: 210 40% 98%;
- 
-    --card: 222.2 84% 4.9%;
-    --card-foreground: 210 40% 98%;
- 
-    --border: 217.2 32.6% 17.5%;
-    --input: 217.2 32.6% 17.5%;
- 
-    --primary: 210 40% 98%;
-    --primary-foreground: 222.2 47.4% 11.2%;
- 
-    --secondary: 217.2 32.6% 17.5%;
-    --secondary-foreground: 210 40% 98%;
- 
-    --accent: 217.2 32.6% 17.5%;
-    --accent-foreground: 210 40% 98%;
- 
-    --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 210 40% 98%;
- 
-    --ring: 212.7 26.8% 83.9%;
+    --background: 202 51% 3%;
+    --foreground: 202 34% 98%;
+    --muted: 22 37% 7%;
+    --muted-foreground: 22 13% 75%;
+    --popover: 202 51% 3%;
+    --popover-foreground: 202 34% 98%;
+    --card: 202 51% 3%;
+    --card-foreground: 202 34% 98%;
+    --border: 202 9% 13%;
+    --input: 202 9% 13%;
+    --primary: 202 41% 80%;
+    --primary-foreground: 202 41% 20%;
+    --secondary: 22 41% 80%;
+    --secondary-foreground: 22 41% 20%;
+    --accent: 22 41% 80%;
+    --accent-foreground: 22 41% 20%;
+    --destructive: 11 93% 45%;
+    --destructive-foreground: 0 0% 100%;
+    --ring: 202 41% 80%;
+    --chart-1: 202 41% 80%;
+    --chart-2: 22 41% 80%;
+    --chart-3: 22 41% 80%;
+    --chart-4: 22 41% 83%;
+    --chart-5: 202 44% 80%;
 
     --sidebar-background: 240 5.9% 10%;
     --sidebar-foreground: 240 4.8% 95.9%;
@@ -85,11 +76,12 @@
     --sidebar-ring: 217.2 91.2% 59.8%;
   }
 }
- 
+
 @layer base {
   * {
     @apply border-border;
   }
+
   body {
     @apply bg-background text-foreground;
   }
